# agent-practice

./: .gitignore  SETUP.md
.devcontainer/: devcontainer.json
english-output-trainer/: .gitignore  DESIGN.md  README.md  SUBMISSION_Day42.md  agent.py  app.py  notebook.ipynb  pyproject.toml  requirements.txt
english-output-trainer/.streamlit/: config.toml  secrets.toml.example
life-coach-agent/: README.md  app.py  goals.txt  pyproject.toml  setup_vector_store.py
movie-agent/: main.py  movie_agent.ipynb  pyproject.toml
movie-expert-agent/: README.md  main.py  movie_expert_agent.ipynb  pyproject.toml
movie-recommendation-bot/: main.py  movie_recommendation_bot.ipynb  pyproject.toml
restaurant-bot/: README.md  app.py  data.py  pyproject.toml  requirements.txt  tools.py
restaurant-bot/.streamlit/: secrets.toml.example
story-book-maker/: README.md  pyproject.toml  run_e2e.py
story-book-maker/story_book_maker/: .env.example  agent.py
