[project]
name = "language-feedback-echo-loop"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.10",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "nbconvert>=7.17.1",
]
